# ashare-quant-factory

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: README.md
deploy/systemd/: aqf.service
docs/: ARCHITECTURE.md  CONFIG_GUIDE.md  FAQ.md  SECURITY.md
scripts/: bootstrap_ubuntu.sh  install_systemd.sh
src/ashare_quant_factory/: calendar.py  cli.py  config.py  logging.py  pipeline.py  timeutils.py
src/ashare_quant_factory/data/: __init__.py  baostock_client.py  fetcher.py
src/ashare_quant_factory/db/: repository.py  schema.py  session.py
src/ashare_quant_factory/report/: charts.py  emailer.py  renderer.py
src/ashare_quant_factory/report/templates/: email_report.html.j2
src/ashare_quant_factory/strategy/: backtester.py  genetic.py  indicators.py  recommender.py
src/ashare_quant_factory/utils/: lock.py  retry.py  validation.py
tests/: test_data_fetcher.py  test_ga_cv_metrics.py  test_genetic_cv.py  test_recommender.py  test_validation.py
