[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-quant-factory"
version = "0.1.0"
description = "A股夜间策略工厂：Baostock 增量入库 + 遗传算法夜间进化 + 基金经理风格邮件日报"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "AQF Contributors"},
]
keywords = ["A-share", "quant", "baostock", "genetic-algorithm", "trading", "backtest", "email-report"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
  "APScheduler>=3.10.4",
  "baostock>=0.8.8",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "mplfinance>=0.12.10b0",
  "jinja2>=3.1.3",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.1",
  "SQLAlchemy>=2.0.25",
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.urls]
Homepage = "https://github.com/yourname/ashare-quant-factory"
Repository = "https://github.com/yourname/ashare-quant-factory"
Issues = "https://github.com/yourname/ashare-quant-factory/issues"

[project.scripts]
aqf = "ashare_quant_factory.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ashare_quant_factory*"]


[tool.setuptools.package-data]
ashare_quant_factory = ["report/templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
